--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,4 +10,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Running script
-      run: ./provision.sh
+      run: |
+            chmod +x ./provision.sh
+            ./provision.sh
